2024-02-21_elk_rpc_sk/elk-training/k8s/elk-cluster-elastic/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  namespace: elk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es.elastic.sikademo.com
        - kb.elastic.sikademo.com
      secretName: main-tls
  rules:
    - host: es.elastic.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-es-http
                port:
                  number: 9200
    - host: kb.elastic.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-kb-http
                port:
                  number: 5601
